--- a/_posts/2019-12-25-the-us-narrative-today.html
+++ b/_posts/2019-12-25-the-us-narrative-today.html
@@ -1693,107 +1693,107 @@ stories:
   domain: http://www.polkonline.com/
   link: https://www.polkonline.com/understanding-washington-state-workers-compensation-laws/
 images:
-- name: fence-mexico-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-emily-carr.jpg
-- name: beach-clouds-lifeguard-beachclouds-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-crunch-paper.jpg
-- name: scream-DSC_0089.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/scream-DSC_0089.jpg
-- name: mosaic-face-mosaic-face-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-smoking-cigarette.jpg
-- name: gypsymosaic-gypsy-eyes-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-colored-circuits.jpg
-- name: sand-hand-sand-hand-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-diego-rivera1.jpg
-- name: rain-princess-DSC_0036.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-DSC_0036.jpg
-- name: miamibeach-miamibeach-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-clean-view.jpg
-- name: aws-s3-square-old-gas-pumps-square.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-old-gas-pumps-square.jpg
-- name: old-house-oldhouse-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-mucha-mult.jpg
-- name: fence-fence-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-green-zuma.jpg
-- name: downtown-trucksilo-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-neo-instinct.jpg
-- name: flower-barbed-wire-flower-barbed-wire-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-dali-three.jpg
-- name: stories-new-17-88-800-500-0-max-0--5--5.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-17-88-800-500-0-max-0--5--5.jpg
-- name: berlinwall-DSC-0084-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-alberto-giacometti.jpg
-- name: catacombs-catacombs-free-woman.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-free-woman.jpg
-- name: store-on-corner-oldcabin-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-colored-circuits.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-dark-dali.jpg
-- name: fence-mexico-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-plentiful.jpg
-- name: catacombs-catacombs-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-alien-goggles.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-marcel-duchamp.jpg
-- name: berlinwall2-berlinwall-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-graham-sutherland.jpg
-- name: dragon_close-up-rain-princess.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon_close-up-rain-princess.jpg
-- name: liberty-back-statue-liberty-back-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-yellow-collage.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-monet-one.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-gan-vogh.jpg
-- name: ellis-island-ellis-island-room-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-ww2-color.jpg
-- name: nyc-flag-nycflag-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-graham-sutherland.jpg
-- name: stalin-time-pigeon_35927783393_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-pigeon_35927783393_o.jpg
-- name: oldhouse-granaryfield-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-deep-connections.jpg
-- name: subway-subway-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-dali-three.jpg
-- name: nazi-invasion-hiding-monster-statue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-hiding-monster-statue.jpg
-- name: aws-s3-stories-castle-walls-cannon-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-castle-walls-cannon-satan-red.jpg
-- name: oldcabin-store-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-far-away.jpg
-- name: downtown-los-angeles-downtown-la-emily-carr.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-emily-carr.JPG
-- name: server-racks-clouds-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-racks-clouds-smooth-ride.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-free-woman.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-free-woman.JPG
-- name: meadowbutterfly-meadow-butterfly-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-constitution.jpg
-- name: windowmountain-window-mountain-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-neo-instinct.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-emily-carr.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-emily-carr.png
-- name: christianity-christianity-under-construction-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-deep-connections.jpg
-- name: server-racks-clouds.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-racks-clouds.jpg
-- name: carry-load-carryload-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-atari-missle.jpg
-- name: copper-circuit-berline-wall-old-building.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-berline-wall-old-building.jpg
-- name: adam-smith-adam-smith-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-clean-view.jpg
-- name: dc-statue-dcstatue-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-rainbow-festival.jpg
-- name: school-clouds-church-clouds-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-smooth-ride.jpg
-- name: dc-statue-dcstatue-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-crafty-painting.jpg
-- name: window-window-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-creativity.jpg
-- name: oldhouse-granaryfield-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-graham-sutherland.jpg
-- name: crow-crow.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow.jpg
+- name: trucksilo-trucksilo-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-deep-connections.jpg
+- name: copper-circuit-british-guards-marching.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-british-guards-marching.jpg
+- name: berlinwall-DSC-0084-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-marcel-duchamp.jpg
+- name: razorwire-DSC-0080-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-rainbow-festival.jpg
+- name: carry-load-carryload-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-nazi-poster.jpg
+- name: gypsymosaic-gypsy-eyes-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-dark-soul.jpg
+- name: old-gas-pumps-oldgaspumps-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-clean-view.jpg
+- name: fence-mexico-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-kandinsky-bv.jpg
+- name: bf-skinner-hiding-monster-statue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-hiding-monster-statue.jpg
+- name: gypsy-wagon-gypsywagon-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-crabapple.jpg
+- name: gypsy-wagon-gypsywagon-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-post-modern.jpg
+- name: la-muse-gears-pipes-plumbing.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-gears-pipes-plumbing.jpg
+- name: downtown-los-angeles-downtown-la-dry-skin.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-dry-skin.JPG
+- name: oldhotel-oldhotel-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-space-pizza.jpg
+- name: server-cloud-server-racks-door-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-kand-two.jpg
+- name: statue-of-liberty-front-view-statueofliberty-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-atari-missle.jpg
+- name: oldtrain-oldtrain-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-space-pizza.jpg
+- name: oldroad-old-road-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-dali-two.jpg
+- name: gypsy-wagon-gypsywagon-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-atari-missle.jpg
+- name: gypsy-wagon-gypsywagon-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-dry-skin.jpg
+- name: birdhouse-birdhouse-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-colored-circuits.jpg
+- name: sand-hand-sand-hand-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-smoking-cigarette.jpg
+- name: store-on-corner-store-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-light-dali.jpg
+- name: old-church-oldchurch-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-atari-asteroids.jpg
+- name: mediterranean-mediterranean-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-purple-storm.jpg
+- name: copper-circuit-statue-liberty-clouds-front-far.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-statue-liberty-clouds-front-far.jpg
+- name: old-gas-pumps-oldgaspumps-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-gred-mash.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-deep-connections.jpg
+- name: oldsmallboat-oldsmallboat-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-dark-dali.jpg
+- name: catacombs-catacombs-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-rainbow-festival.jpg
+- name: catacombs-catacombs-feed-people.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-feed-people.jpg
+- name: bluelake-crafty-painting-file-00-00-38-67.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-crafty-painting-file-00-00-38-67.jpg
+- name: subway-subway-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-emily-carr.jpg
+- name: stories-servers-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-servers-blue-circuit.jpg
+- name: nazi-invasion-san-francisco-skyline-smoke.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-san-francisco-skyline-smoke.jpg
+- name: containership-containership-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-smoking-cigarette.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-gred-mash.jpg
+- name: aws-s3-columbiagorge-columbiagorge-transformed-still-600.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-columbiagorge-columbiagorge-transformed-still-600.png
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-rainbow-festival.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-blue-circuit-4.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-blue-circuit-4.jpg
+- name: bluelake-green-zuma-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-green-zuma-file-00-00-00-00.jpg
+- name: bf-skinner-please-do-not-feed-the-pigeon.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-please-do-not-feed-the-pigeon.jpg
+- name: bf-skinner-clowns_35893926114_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-clowns_35893926114_o.jpg
+- name: legal-statue-legalstatue-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-sand-paper.jpg
+- name: beach-rocks-beach-rocks-currents-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-dry-skin.jpg
+- name: oldsmallboat-oldsmallboat-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-purp-paper.jpg
+- name: abandonedbuildings_dali_three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_dali_three.jpg
+- name: eduardo-eduardo-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-aqua.jpg
+- name: bf-skinner-flowers-diamon-creek.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-flowers-diamon-creek.jpg
+- name: sand-hand-sand-hand-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-plentiful.jpg
+- name: stories-downtheline-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-downtheline-dali-three.jpg
 ---
 Things To Do, Christmas Eve.&nbsp;Innovative Journalism Projects Sought For RJIs Flexible Fellowship Program.&nbsp;Mount Carmel Guild Of Trenton.&nbsp;Hanna Springs Students Write Letters To Santa.&nbsp;Our Lady Of Guadalupe.&nbsp;Cedric The Entertainer Stands Up At Sound Board.&nbsp;Flint Hills Media Buys Clay Center Dispatch.&nbsp;Sticking To Treatment Key To Managing Holiday Stressors.&nbsp;
